--- a/style.css
+++ b/style.css
@@ -7,7 +7,13 @@
   .sidebar, .content {
     width: 100%;
     float: none;
+  }@media (max-width: 768px) {
+  .item {
+    flex: 1 1 100%; /* Stack items on smaller screens */
   }
+}
+
+    
 }
 
     margin: 0;
@@ -80,4 +86,5 @@ body {
 .quote-display.fade-out {
     opacity: 0;
 }
+
 
